[project]
name = "paytm-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "langchain>=1.0.0",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-groq>=0.1.4",
    "langgraph>=1.1.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]
